<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="isEditing"
            type="Boolean" />

        <variable
            name="title"
            type="String" />

        <variable
            name="content"
            type="String" />

        <variable
            name="errorMessage"
            type="String" />

        <import type="android.view.View" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/editable_text_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/editable_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={title}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Overline"
            android:visibility="@{isEditing ? View.GONE : View.VISIBLE }" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@{title}"
            android:visibility="@{!isEditing ? View.GONE : View.VISIBLE }"
            app:errorContentDescription="@{errorMessage}"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@={content}" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/editable_text_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={content}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:visibility="@{isEditing ? View.GONE : View.VISIBLE }" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>

