<resources>
    <string name="app_name">Unlibrary</string>
    <string name="auth_background_content_description">Man reading book</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="login_button">Login</string>
    <string name="cancel_button">Cancel</string>
    <string name="register_button">Register</string>
    <string name="create_account_button">Create Account</string>
    <string name="email_hint">Email</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="library_nav">Library</string>
    <string name="unlibrary_nav">Unlibrary</string>
    <string name="exchange_nav">Exchange</string>
    <string name="profile_nav">Profile</string>
    <string name="card_view_image_description">Holds image of card</string>
    <string name="logout">Logout</string>
    <string name="enter_password_to_confirm_changes">Password</string>
    <string name="password_confirmation_dialog_title">Enter Password to confirm changes</string>
    <string name="fab_add_book_description">Add book</string>
    <string name="fab_filter_description">Filter</string>
    <string name="search_bar_hint">Search for books to borrow...</string>
    <string name="title_hint">Title</string>
    <string name="author_hint">Author</string>
    <string name="isbn_hint">ISBN</string>
    <string name="auto_fill_button">Auto-Fill</string>
    <string name="save_button">Save</string>
    <string name="edit_book_fab_description">Edit book</string>
    <string name="delete_book_fab_description">Delete book</string>
    <string name="handoff_book_description">Handoff book</string>
    <string name="isbn">ISBN</string>
    <string name="request_status">Request Status</string>
    <string name="book_description">Book Description</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="add_photo_of_book">Add photo of book</string>
    <string name="available">Available</string>
    <string name="requested">Requested</string>
    <string name="accepted">Accepted</string>
    <string name="borrowed">Borrowed</string>
    <string name="requesters">Requesters</string>
    <string name="handoff_book_fab_description">Handoff book</string>
    <string name="handoff_book">Handoff Book</string>
    <string name="owner">OWNER</string>
    <string name="handoff_location">Handoff Location</string>
    <string name="accept_request_fab_description">Accept request</string>
    <string name="decline_request_fab_description">Decline request</string>
    <string name="accept_handoff_location">Accept Handoff Location</string>
    <string name="add_request_description">Add request</string>
</resources>
